--- a/Simple Ray Tracer/Simple Ray Tracer.vcxproj
+++ b/Simple Ray Tracer/Simple Ray Tracer.vcxproj
@@ -115,6 +115,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="bitmap_image.hpp" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="ImagePlane.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="Material.h" />
+    <ClInclude Include="Ray.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Scene.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="Tracer.h" />
+    <ClInclude Include="Vector3D.h" />
+    <ClInclude Include="VisibleObject.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ImagePlane.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Material.cpp" />
+    <ClCompile Include="Ray.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Tracer.cpp" />
+    <ClCompile Include="Vector3D.cpp" />
+    <ClCompile Include="VisibleObject.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
