--- a/Simple Ray Tracer/Simple Ray Tracer.vcxproj
+++ b/Simple Ray Tracer/Simple Ray Tracer.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Tracer.h" />
@@ -141,6 +142,9 @@
     <ClCompile Include="Tracer.cpp" />
     <ClCompile Include="Vector3D.cpp" />
     <ClCompile Include="VisibleObject.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Simple Ray Tracer.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
