--- a/Simple Ray Tracer/Simple Ray Tracer.vcxproj.filters
+++ b/Simple Ray Tracer/Simple Ray Tracer.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="VisibleObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp">
@@ -89,5 +92,10 @@
     <ClCompile Include="VisibleObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Simple Ray Tracer.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
